fix moving content when file size too large

--- a/frontend/src/components/Dropzone.css
+++ b/frontend/src/components/Dropzone.css
@@ -9,6 +9,7 @@
     justify-content: center;
     flex-direction: column;
     font-size: 16px;
+    margin: 0 auto;
 }
 
 .Icon {
